--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
             background-color: #000;
         }
     </style>
-    <title>EMERGENCY_PROTOCOL_ACTIVE</title>
-    <meta name="description" content="LOOK FOR THE SAFETY CODE. STICK TO THE NOISE. REMAIN STATIC.">
-    <meta name="author" content="tirsod & lilybeevee">
+    <title>Tirsod | Game Developer, Artist, Musician</title>
+    <meta name="description" content="Tirsod is a game developer, artist, and musician. Creator of WAVE RIDER and ANTIFECTOR. Explore games, music, and art.">
+    <meta name="author" content="tirsod">
     <link rel='icon' href='ast/skull.ico' type='image/x-icon'/ >
     <script type='text/javascript' src='ast/tv.js'></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+    <meta property="og:title" content="Tirsod | Game Developer, Artist, Musician">
+    <meta property="og:description" content="Enter the world of tirsod. Games, music, and art.">
+    <meta property="og:url" content="https://tirsod.com">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://tirsod.com/ast/skull.ico">
+
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Tirsod | Game Developer, Artist, Musician">
+    <meta name="twitter:description" content="Creator of Wave Rider & Antifector. Check out games, music, and digital art.">
+    <meta name="twitter:image" content="https://tirsod.com/ast/skull.ico">
+
+    <link rel="canonical" href="https://tirsod.com"/>
 </head>
 
 <body>
@@ -100,6 +113,15 @@
     <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen style="z-index: 1; border: 1px solid black;"></iframe>
   </div>
 </div>
+  
+<div class="tvscreen" id="tvscreenwelcome">
+  <a href="https://tirdelusion.crd.co" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">
+    <i>I'm Tirsod, a game developer, artist, and musician.</i><br><br>
+    I made Wave Rider & Antifector,<br>and have also worked on multiple games by Startreming!<br>
+    <br>
+    See more here:
+  </p></a>
+</div>
 
 <div style="position:relative; display: flex; column-count: 1; flex-direction: column; row-gap: 60px; flex-wrap: nowrap;">
   <div class="tvselector">
@@ -138,11 +160,13 @@
     </div>
   </div>
 
-  <div style="margin-top: 10%; width: 50%; margin: 0 auto; margin-top: 50px; display: flex; flex-direction: column; z-index: 1; position: relative; 	animation-name: fadein; animation-duration: 1.5s;">
+
+
+  <div style="margin-top: 10%; width: 25%; margin: 0 auto; margin-top: 20px; display: flex; flex-direction: column; z-index: 1; position: relative; 	animation-name: fadein; animation-duration: 1.5s;">
     <div>
       <a href = "https://new.tirsod.com">
         <div class = "floattv" style="height: 80px; margin-top: 50px;">
-          [EMERGENCY PROTOCOL ACTIVE]<br>[DO NOT ENTER THIS PORTAL]
+          Wanna get lost?
         </div>
       </a>
     </div>
