--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <div class="darken"></div>
 
 <div class="tvscreen" id="tvscreenwelcome">
-  <a href="https://tirdelusion.crd.co" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">(...)</p></a>
+  <a href="https://new.tirsod.com" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">(...)</p></a>
 </div>
 
 <div id="youtubevideosection">
@@ -115,7 +115,7 @@
 </div>
   
 <div class="tvscreen" id="tvscreenwelcome">
-  <a href="https://tirdelusion.crd.co" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">
+  <a href="https://new.tirsod.com" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2;">
     <i>I'm Tirsod, a game developer, artist, and musician.</i><br><br>
     I made Wave Rider & Antifector,<br>and have also worked on multiple games by Startreming!<br>
     <br>
@@ -126,7 +126,7 @@
 <div style="position:relative; display: flex; column-count: 1; flex-direction: column; row-gap: 60px; flex-wrap: nowrap;">
   <div class="tvselector">
       <div>
-        <a href = "https://tirdelusion.crd.co/#games">
+        <a href = "https://new.tirsod.com/#games">
           <div class = "floattv">
             games
           </div>
@@ -134,7 +134,7 @@
       </div>
 
       <div>
-        <a href = "https://tirdelusion.crd.co/#music">
+        <a href = "https://new.tirsod.com/#music">
           <div class = "floattv">
             music
           </div>
@@ -142,7 +142,7 @@
       </div>
 
       <div>
-        <a href = "https://tirdelusion.crd.co/#art">
+        <a href = "https://new.tirsod.com/#art">
           <div class = "floattv">
             art
           </div>
@@ -150,7 +150,7 @@
       </div>
 
       <div>
-        <a href = "https://tirdelusion.crd.co/#links">
+        <a href = "https://new.tirsod.com/#links">
           <div class = "floattv">
             links
           </div>
@@ -164,7 +164,7 @@
 
   <div style="margin-top: 10%; width: 25%; margin: 0 auto; margin-top: 20px; display: flex; flex-direction: column; z-index: 1; position: relative; 	animation-name: fadein; animation-duration: 1.5s;">
     <div>
-      <a href = "https://new.tirsod.com">
+      <a href = "https://lost.tirsod.com">
         <div class = "floattv" style="height: 80px; margin-top: 50px;">
           Wanna get lost?
         </div>
