--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
 </div>
   
 <div class="tvscreen" id="tvscreenwelcome">
-  <a href="https://new.tirsod.com" style="z-index: 2; position:relative;"><p id="welcome" style="z-index: 2; font-size: 16pt;">
+  <p id="welcome" style="z-index: 2; font-size: 16pt;">
     <i>I'm Tirsod, a game developer, artist, and musician.</i><br><br>
     I made Wave Rider & Antifector,<br>and have also worked on multiple games by Startreming!<br>
     <br>
     See more here:
-  </p></a>
+  </p>
 </div>
 
 <div style="position:relative; display: flex; column-count: 1; flex-direction: column; row-gap: 60px; flex-wrap: nowrap;">
