--- a/links/index.html
+++ b/links/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Refresh" content="0; url='https://tirdelusion.crd.co/#links'" /> 
+    <meta http-equiv="Refresh" content="0; url='https://new.tirsod.com/#links'" /> 
     <style>
         html {
             background-color: #000;
