fixed newline, fixed art title

--- a/art/index.html
+++ b/art/index.html
@@ -13,7 +13,7 @@
         }
     </style>
 
-    <title>tirsod>games...</title>
+    <title>tirsod>art...</title>
     <meta name="description" content="welcome to tirsod.com || games, music & art || stick to the noise">
     <meta name="author" content="tirsod">
     <link rel='icon' href='/ast/skull.ico' type='image/x-icon'/ >
