--- a/games/index.html
+++ b/games/index.html
@@ -143,8 +143,8 @@
 <hr class="b">
 <h5>also, check these out!</h5>
 <p><a href="../pcbpreviewtool">papercraft buddy tool</a>
-see what your textures will look like on stream
-<a href="../mordio">mordio</a>
+see what your textures will look like on stream</p>
+<p><a href="../mordio">mordio</a>
 mdxcai fangame</p>
  
   <br><br><br>
