--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Games/Music/Art by tirsod || stick to the noise.">
     <meta property="og:url" content="https://tirsod.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://tirsod.com/ast/skull.ico">
+    <meta property="og:image" content="https://tirsod.com/ast/scpfp.png">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="tirsod.com || Games/Music/Art">
