--- a/games/waverider/index.html
+++ b/games/waverider/index.html
@@ -23,12 +23,12 @@
     <meta property="og:description" content="Games/Music/Art by tirsod || stick to the noise.">
     <meta property="og:url" content="https://tirsod.com">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://tirsod.com/ast/skull.ico">
+    <meta property="og:image" content="https://tirsod.com/ast/scpfp.png">
 
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="tirsod.com || Games/Music/Art">
     <meta name="twitter:description" content="Games/Music/Art by tirsod || stick to the noise.">
-    <meta name="twitter:image" content="https://tirsod.com/ast/skull.ico">
+    <meta name="twitter:image" content="https://tirsod.com/ast/scpfp.png">
 
     <link rel="canonical" href="https://tirsod.com"/>
 
