fadein entry text

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
 </div>
   
 <div class="tvscreen" id="notvscreenwelcome">
-  <div style="z-index: 2; font-size: 16pt;">
+  <div style="z-index: 2; font-size: 16pt; animation: fadein 1s linear;">
     <p>Welcome to tirsod.com</p>
 <p>Choose a category to explore its contents.</p>
 
-  </p>
+  </div>
 </div>
 
 <div class="tvselector">
