live on twitch screen

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="welcome to tirsod.com || games, music & art || stick to the noise">
     <meta name="author" content="tirsod">
     <link rel='icon' href='/ast/skull.ico' type='image/x-icon'/ >
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
     <meta property="og:title" content="tirsod.com || Games/Music/Art">
@@ -109,6 +110,7 @@
 <div id="youtubevideosection">
   <div class="tvscreen" z-index="1">
     <iframe id="youtube_video" src="https://www.youtube.com/embed/F-xedRKs_Ok" width="600" height="340" frameborder="0" allowfullscreen style="z-index: 1; border: 1px solid black;"></iframe>
+    <iframe id="twitch_player" src="https://player.twitch.tv/?channel=tirsod&parent=www.tirsod.com" frameborder="0" allowfullscreen="true" scrolling="no" height="340" width="600" style="z-index: 1; border: 1px solid black; display: none;"></iframe>
   </div>
 </div>
   
