Update - Nintendo DS blog - Archives

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 <div class="tvscreen" id="notvscreenwelcome">
   <div style="z-index: 2; font-size: 16pt; animation: fadein 1s linear;">
     <p>Welcome to tirsod.com</p>
+<hr>
+<p>Latest Entry | <a href="blog/personal/2025/the-nintendo-ds">The Nintendo DS</a> | 12/5/25</p>
+<hr>
 <p>Choose a category to explore its contents.</p>
 
   </div>
